Implement time zone handling and city recognition

--- a/src/lib/ololord_res.qrc
+++ b/src/lib/ololord_res.qrc
@@ -3,5 +3,7 @@
         <file>res/config.js</file>
         <file>res/country_code_name_map.txt</file>
         <file>res/ip_country_code_map.txt</file>
+        <file>res/ip_city_name_map.txt</file>
+        <file>res/city_name_timezone_map.txt</file>
     </qresource>
 </RCC>
