--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -1,159 +1,8 @@
 <% c++ #include "controller/board.h" %>
 <% skin my_skin %>
-<% view board uses Content::Board %>
+<% view board uses Content::Board extends base_board %>
 
-<% template settings() %>
-<div class="settingsBar">
-    <span>
-        <%= localeLabelText %>
-        <select id="localeChangeSelect" class="select" onchange="javascript:changeLocale();">
-            <% foreach locale in locales %>
-                <% item %>
-                    <% if ( locale.name == content.currentLocale.name ) %>
-                        <option value="<%= locale.name %>" selected="true">
-                    <% else %>
-                        <option value="<%= locale.name %>">
-                    <% end %>
-                        <%= locale.language %> (<%= locale.country %>)
-                    </option>
-                <% end %>
-            <% end %>
-        </select>
-    </span>
-</div>
-<% end template %>
-
-<% template navbar() %>
-<div class="navbar">
-    <% foreach board in boards %>
-        <% item %>
-        <span class="navbarItem">[<a href="/<%= sitePathPrefix %><%= board.name %>"
-              title="<%= board.title %>"><%= board.name %></a>] </span>
-        <% end %>
-    <% empty %>
-    <% end %>
-    <span class="navbarItem">[<a href="/<%= sitePathPrefix %>"><%= toHomePageText %></a>]</span>
-</div>
-<% end template %>
-
-<% template banner() %>
-<% if ( !content.bannerFileName.empty() ) %>
-    <div class="banner">
-        <img src="/<%= sitePathPrefix %>img/banner/<%= bannerFileName %>">
-    </div>
-<% end %>
-<% end template %>
-
-<% template createThreadAction(std::string position) %>
-<form id="threadForm<%= position %>" class="postFormInvisible" action="/<%= sitePathPrefix %>action/create_thread"
-      method="post" enctype="multipart/form-data" accept-charset="utf-8">
-    <input type="hidden" id="threadFormInputBoard<%= position %>" value="<%= currentBoard.name %>" name="board" />
-    <table class="postFormTable">
-        <tbody>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormLabelEmail %></b>
-                </td>
-                <td class="postformField">
-                    <input id="threadFormInputEmail<%= position %>" type="text" maxlength="150" name="email"
-                           size="30" />
-                    <input type="submit" value="<%= postFormButtonSubmit %>" />
-                </td>
-            </tr>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormLabelName %></b>
-                </td>
-                <td class="postformField">
-                    <input type="text" maxlength="50" id="threadFormInputName<%= position %>" name="name" size="43" />
-                </td>
-            </tr>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormLabelSubject %></b>
-                </td>
-                <td class="postformField">
-                    <input type="text" maxlength="150" id="threadFormInputSubject<%= position %>" name="subject"
-                           size="43" />
-                </td>
-            </tr>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormInputText %></b>
-                </td>
-                <td class="postformField">
-                    <textarea name="text" id="threadFormInputText<%= position %>" rows="10" cols="43"
-                              placeholder="<%= postFormInputTextPlaceholder %>" class="postFormTextarea"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormInputFile %></b>
-                </td>
-                <td class="postformField">
-                    <input type="file" name="image" id="threadFormInputFile<%= position %>" accept="image/*" />
-                </td>
-            </tr>
-            <tr>
-                <td class="postformLabel">
-                    <b><%= postFormLabelPassword %></b>
-                </td>
-                <td class="postformField">
-                    <input type="password" maxlength="150" id="threadFormInputPassword<%= position %>" name="password"
-                           size="43" />
-                </td>
-            </tr>
-            <% if ( content.captchaEnabled ) %>
-                <tr>
-                    <td class="postformLabel">
-                        <b><%= postFormLabelCaptcha %></b>
-                    </td>
-                    <td id="googleCaptcha<%= position %>" class="postformField">
-                        <% if ( "Top" == position ) %>
-                            <div id="googleCaptcha" class="g-recaptcha" data-sitekey="<%= captchaKey %>"></div>
-                        <% end %>
-                    </td>
-                </tr>
-            <% end %>
-        </tbody>
-    </table>
-</form>
-<% end template %>
-
-<% template searchAction(std::string position) %>
-<form id="searchForm<%= position %>" class="searchFormInvisible">
-    <input type="text" />
-</form>
-<% end template %>
-
-<% template actions(std::string position) %>
-<div class="actions">
-    <input type="hidden" id="hideSearchFormText" value="<%= hideSearchFormText %>" />
-    <input type="hidden" id="hideThreadFormText" value="<%= hideThreadFormText %>" />
-    <input type="hidden" id="showSearchFormText" value="<%= showSearchFormText %>" />
-    <input type="hidden" id="showThreadFormText" value="<%= showThreadFormText %>" />
-    <div>
-        <% if ( content.postingEnabled ) %>
-            [<a id="showHideThreadFormButton<%= position %>"
-                 href="javascript:showHideThreadForm('<%= position %>');">
-                <%= showThreadFormText %>
-            </a>]
-        <% else %>
-        <% end %>
-        [<a id="showHideSearchFormButton<%= position %>"
-            href="javascript:showHideSearchForm('<%= position %>');">
-            <%= showSearchFormText %>
-        </a>]
-    </div>
-    <% include searchAction(position) %>
-    <% if ( content.postingEnabled ) %>
-        <% include createThreadAction(position) %>
-    <% else %>
-    <% end %>
-</div>
-<% end template %>
-
-<% template post(HelperPost post, HelperThread thread) %>
+<% template post(Content::BaseBoard::Post post, Content::Board::Thread thread) %>
 <% if ( post.number == thread.opPost.number ) %>
     <div class="opPost">
 <% else %>
@@ -298,29 +147,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title><%= pageTitle %></title>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link id="favicon" rel="shortcut icon" href="/<%= sitePathPrefix %>favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/base.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/settings_bar.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/navbar.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/banner.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/postform.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/searchform.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/actions.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/post.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/title.css">
+        <% include baseHead() %>
+        <% include settingsHead() %>
+        <% include navbarHead() %>
+        <% include bannerHead() %>
+        <% include actionHead() %>
+        <% include titleHead() %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/board.css">
         <!--script src="http://code.jquery.com/jquery-2.1.3.min.js"></script-->
         <!--script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script-->
-        <% if ( content.captchaEnabled ) %>
-            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js"></script>
-        <% end %>
         <!--script src="/<%= sitePathPrefix %>js/3rdparty/sha256.js"></script-->
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/board.js"></script>
-        <script type="text/javascript" src="/<%= sitePathPrefix %>js/settings.js"></script>
     </head>
-    <body onload="javascript:initializeOnLoad();">
+    <body onload="javascript:initializeOnLoadBoard();">
         <% include settings() %>
         <br />
         <% include navbar() %>
