--- a/src/lib/template/rules.tmpl
+++ b/src/lib/template/rules.tmpl
@@ -1,54 +1,16 @@
 <% c++ #include "controller/rules.h" %>
 <% skin my_skin %>
-<% view rules uses Content::Rules %>
-
-<% template settings() %>
-<div class="settingsBar">
-    <span>
-        <%= localeLabelText %>
-        <select id="localeChangeSelect" class="select" onchange="javascript:changeLocale();">
-            <% foreach locale in locales %>
-                <% item %>
-                    <% if ( locale.name == content.currentLocale.name ) %>
-                        <option value="<%= locale.name %>" selected="true">
-                    <% else %>
-                        <option value="<%= locale.name %>">
-                    <% end %>
-                        <%= locale.language %> (<%= locale.country %>)
-                    </option>
-                <% end %>
-            <% end %>
-        </select>
-    </span>
-</div>
-<% end template %>
-
-<% template navbar() %>
-<div class="navbar">
-    <% foreach board in boards %>
-        <% item %>
-        <span class="navbarItem">[<a href="/<%= sitePathPrefix %><%= board.name %>"
-              title="<%= board.title %>"><%= board.name %></a>] </span>
-        <% end %>
-    <% empty %>
-    <% end %>
-    <span class="navbarItem">[<a href="/<%= sitePathPrefix %>"><%= toHomePageText %></a>]</span>
-</div>
-<% end template %>
+<% view rules uses Content::Rules extends base %>
 
 <% template render() %>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title><%= pageTitle %></title>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link id="favicon" rel="shortcut icon" href="/<%= sitePathPrefix %>favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/base.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/settings_bar.css">
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/navbar.css">
+        <% include baseHead() %>
+        <% include settingsHead() %>
+        <% include navbarHead() %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/title.css">
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/rules.css">
-        <script type="text/javascript" src="/<%= sitePathPrefix %>js/settings.js"></script>
     </head>
     <body>
         <% include settings() %>
