Implement login/registration/tripcode system

--- a/src/lib/ololord_static_js.qrc
+++ b/src/lib/ololord_static_js.qrc
@@ -1,9 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>static/js/3rdparty/sha256.js</file>
         <file>static/js/thread.js</file>
         <file>static/js/settings.js</file>
         <file>static/js/action.js</file>
         <file>static/js/board.js</file>
+        <file>static/js/3rdparty/sha1.js</file>
     </qresource>
 </RCC>
