--- a/src/lib/static/css/settings_bar.css
+++ b/src/lib/static/css/settings_bar.css
@@ -9,3 +9,11 @@
     text-align: left;
     white-spcace: nowrap;
 }
+
+.loginMessageWarning {
+    color: orange;
+}
+
+.loginMessageOk {
+    color: green;
+}
