--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -22,6 +22,9 @@
         <% else %>
             <%= post.name %>
         <% end %>
+        <% if ( !post.tripcode.empty() ) %>
+            <span class="tripcode"><%= post.tripcode %></span>
+        <% end %>
         <%= post.dateTime %>
         <% if ( content.postingEnabled ) %>
             #<a href="javascript:insertPostNumber('<%= post.number %>');"><%= post.number %></a>
