--- a/src/lib/static/css/base.css
+++ b/src/lib/static/css/base.css
@@ -11,3 +11,13 @@ a {
     border: 1px solid #CCCCCC;
     cursor: pointer;
 }
+
+.input {
+    border: 1px solid #CCCCCC;
+}
+
+.button {
+    background: #EAEAEA;
+    border: 1px solid #CCCCCC;
+    cursor: pointer;
+}
