--- a/src/lib/template/0_base.tmpl
+++ b/src/lib/template/0_base.tmpl
@@ -32,6 +32,20 @@
             <% end %>
         </select>
     </span>
+    <span>
+        <%= loginLabelText %>
+        <% if ( content.loggedIn ) %>
+            <button class="button" onclick="javascript:doLogout();"><%= loginButtonText %></button>
+        <% else %>
+            <input id="loginInput" type="password" class="input" name="hashpass" />
+            <button class="button" onclick="javascript:doLogin();"><%= loginButtonText %></button>
+        <% end %>
+        <% if ( !content.loginMessageWarning.empty() ) %>
+            <span class="loginMessageWarning"><%= loginMessageWarning %></span>
+        <% elif ( !content.loginMessageOk.empty() ) %>
+            <span class="loginMessageOk"><%= loginMessageOk %></span>
+        <% end %>
+    </span>
 </div>
 <% end template %>
 
@@ -57,6 +71,7 @@
 
 <% template settingsHead() %>
 <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/settings_bar.css">
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/sha1.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/settings.js"></script>
 <% end template %>
 
