Implement search (Google Search)

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -10,13 +10,12 @@
         <file>static/css/settings_bar.css</file>
         <file>static/css/navbar.css</file>
         <file>static/css/banner.css</file>
-        <file>static/css/postform.css</file>
-        <file>static/css/searchform.css</file>
         <file>static/css/post.css</file>
         <file>static/css/board_image.css</file>
         <file>static/css/board_video.css</file>
         <file>static/css/title.css</file>
         <file>static/css/not_found.css</file>
-        <file>static/css/action.css</file>
+        <file>static/css/search_action.css</file>
+        <file>static/css/create_action.css</file>
     </qresource>
 </RCC>
