--- a/src/lib/template/0_base.tmpl
+++ b/src/lib/template/0_base.tmpl
@@ -62,6 +62,35 @@
 </div>
 <% end template %>
 
+<% template searchAction(std::string position) %>
+<% if ( !content.searchApiKey.empty() ) %>
+    <div class="searchAction">
+        <input type="hidden" id="hideSearchFormText" value="<%= hideSearchFormText %>" />
+        <input type="hidden" id="showSearchFormText" value="<%= showSearchFormText %>" />
+        <div>
+            [<a id="showHideSearchFormButton<%= position %>"
+                href="javascript:showHideSearchForm('<%= position %>');">
+                <%= showSearchFormText %>
+            </a>]
+        </div>
+        <script>
+            (function() {
+                var gcse = document.createElement("script");
+                gcse.type = "text/javascript";
+                gcse.async = true;
+                gcse.src = (document.location.protocol == "https:" ? "https:" : "http:") +
+                    "//www.google.com/cse/cse.js?cx=<%= searchApiKey %>";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(gcse, s);
+            })();
+        </script>
+        <div id="searchForm<%= position %>" class="searchFormInvisible">
+            <gcse:search></gcse:search>
+        </div>
+    </div>
+<% end %>
+<% end template %>
+
 <% template baseHead() %>
 <title><%= pageTitle %></title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -78,6 +107,15 @@
 <% template navbarHead() %>
 <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/navbar.css">
 <% end template %>
+
+<% template searchActionHead() %>
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/search_action.css">
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/search_action.js"></script>
+<% end template %>
+
+<% template titleHead() %>
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/title.css">
+<% end %>
 
 <% end view %>
 <% end skin %>
