--- a/src/lib/ololord_static_js.qrc
+++ b/src/lib/ololord_static_js.qrc
@@ -2,8 +2,9 @@
     <qresource prefix="/">
         <file>static/js/thread.js</file>
         <file>static/js/settings.js</file>
-        <file>static/js/action.js</file>
         <file>static/js/board.js</file>
         <file>static/js/3rdparty/sha1.js</file>
+        <file>static/js/create_action.js</file>
+        <file>static/js/search_action.js</file>
     </qresource>
 </RCC>
