--- a/src/lib/static/css/create_action.css
+++ b/src/lib/static/css/create_action.css
@@ -1,3 +1,11 @@
+.createAction {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    white-space: nowrap;
+}
+
 .postFormInvisible {
     display: none;
 }
