--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -153,18 +153,21 @@
         <% include settingsHead() %>
         <% include navbarHead() %>
         <% include bannerHead() %>
-        <% include actionHead() %>
+        <% include createActionHead() %>
+        <% include boardHead() %>
+        <% include searchActionHead() %>
         <% include titleHead() %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/board.css">
-        <!--script src="http://code.jquery.com/jquery-2.1.3.min.js"></script-->
-        <!--script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script-->
-        <!--script src="/<%= sitePathPrefix %>js/3rdparty/sha256.js"></script-->
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/board.js"></script>
     </head>
     <body onload="javascript:initializeOnLoadBoard();">
         <% include settings() %>
         <br />
         <% include navbar() %>
+        <% if ( !content.searchApiKey.empty() ) %>
+            <br />
+        <% end %>
+        <% include searchAction("Top") %>
         <% if ( !content.bannerFileName.empty() ) %>
             <br />
         <% end %>
@@ -183,14 +186,18 @@
         <% else %>
         <% end %>
         <hr />
-        <% include actions("Top") %>
+        <% include createAction("Top") %>
         <% include threads() %>
         <hr />
-        <% include actions("Bottom") %>
+        <% include createAction("Bottom") %>
         <hr />
         <% include pages() %>
         <hr />
         <% include navbar() %>
+        <% if ( !content.searchApiKey.empty() ) %>
+            <br />
+        <% end %>
+        <% include searchAction("Bottom") %>
     </body>
 </html>
 <% end template %>
