--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -79,18 +79,21 @@
         <% include settingsHead() %>
         <% include navbarHead() %>
         <% include bannerHead() %>
-        <% include actionHead() %>
+        <% include createActionHead() %>
+        <% include boardHead() %>
+        <% include searchActionHead() %>
         <% include titleHead() %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/thread.css">
-        <!--script src="http://code.jquery.com/jquery-2.1.3.min.js"></script-->
-        <!--script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script-->
-        <!--script src="/<%= sitePathPrefix %>js/3rdparty/sha256.js"></script-->
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
     </head>
     <body onload="javascript:initializeOnLoadThread();">
         <% include settings() %>
         <br />
         <% include navbar() %>
+        <% if ( !content.searchApiKey.empty() ) %>
+            <br />
+        <% end %>
+        <% include searchAction("Top") %>
         <% if ( !content.bannerFileName.empty() ) %>
             <br />
         <% end %>
@@ -117,7 +120,7 @@
             </div>
         <% end %>
         <hr />
-        <% include actions("Top") %>
+        <% include createAction("Top") %>
         <hr />
         <% include post(opPost, 1, fixed) %>
         <% foreach p in posts %>
@@ -127,9 +130,13 @@
         <% empty %>
         <% end %>
         <hr />
-        <% include actions("Bottom") %>
+        <% include createAction("Bottom") %>
         <hr />
         <% include navbar() %>
+        <% if ( !content.searchApiKey.empty() ) %>
+            <br />
+        <% end %>
+        <% include searchAction("Bottom") %>
     </body>
 </html>
 <% end template %>
