Improve login system
* Highlight moders' names
* Add ability to insert raw HTML into name field for admins

--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -19,7 +19,7 @@
         <% if ( !post.email.empty() ) %>
             <a href="mailto:<%= post.email %>"><%= post.name %></a>
         <% else %>
-            <%= post.name %>
+            <%= post.name | raw %>
         <% end %>
         <% if ( !post.tripcode.empty() ) %>
             <span class="tripcode"><%= post.tripcode %></span>
