--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -16,11 +16,17 @@
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
         <b><%= post.subject %></b>
+        <% if ( post.registered ) %>
+                <span class="registeredName">
+            <% end %>
         <% if ( !post.email.empty() ) %>
-            <a href="mailto:<%= post.email %>"><%= post.name %></a>
+            <a href="mailto:<%= post.email %>"><%= post.nameRaw %></a>
         <% else %>
             <%= post.name | raw %>
         <% end %>
+        <% if ( post.registered ) %>
+                </span>
+            <% end %>
         <% if ( !post.tripcode.empty() ) %>
             <span class="tripcode"><%= post.tripcode %></span>
         <% end %>
