--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -17,11 +17,17 @@
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
         <b><%= post.subject %></b>
+        <% if ( post.registered ) %>
+                <span class="registeredName">
+            <% end %>
         <% if ( !post.email.empty() ) %>
-            <a href="mailto:<%= post.email %>"><%= post.name %></a>
+            <a href="mailto:<%= post.email %>"><%= post.nameRaw %></a>
         <% else %>
             <%= post.name | raw %>
         <% end %>
+        <% if ( post.registered ) %>
+                </span>
+            <% end %>
         <% if ( !post.tripcode.empty() ) %>
             <span class="tripcode"><%= post.tripcode %></span>
         <% end %>
@@ -113,13 +119,14 @@
             <div class="theMessage">
                 <h2><%= postLimitReachedText %></h2>
             </div>
+        <% else %>
+            <hr />
         <% end %>
         <% if ( !content.postLimitReached() && content.bumpLimitReached() ) %>
             <div class="theMessage">
                 <h3><%= bumpLimitReachedText %></h3>
             </div>
         <% end %>
-        <hr />
         <% include createAction("Top") %>
         <hr />
         <% include post(opPost, 1, fixed) %>
@@ -129,7 +136,9 @@
             <% end %>
         <% empty %>
         <% end %>
-        <hr />
+        <% if ( content.postingEnabled && !content.postLimitReached() ) %>
+            <hr />
+        <% end %>
         <% include createAction("Bottom") %>
         <hr />
         <% include navbar() %>
