Fix file deletion; fix post deletion

--- a/src/lib/template/1_base_board.tmpl
+++ b/src/lib/template/1_base_board.tmpl
@@ -106,6 +106,7 @@
 
 <% template boardTexts() %>
 <input type="hidden" id="enterPasswordText" value="<%= enterPasswordText %>" />
+<input type="hidden" id="notLoggedInText" value="<%= notLoggedInText %>" />
 <% end template %>
 
 <% template bannerHead() %>
