Fix post deletion

--- a/src/lib/template/1_base_board.tmpl
+++ b/src/lib/template/1_base_board.tmpl
@@ -122,6 +122,7 @@
 
 <% template boardTexts() %>
 <input type="hidden" id="enterPasswordText" value="<%= enterPasswordText %>" />
+<input type="hidden" id="ajaxErrorText" value="<%= ajaxErrorText %>" />
 <input type="hidden" id="notLoggedInText" value="<%= notLoggedInText %>" />
 <% end template %>
 
