--- a/src/lib/static/css/base.css
+++ b/src/lib/static/css/base.css
@@ -21,3 +21,9 @@ a {
     border: 1px solid #CCCCCC;
     cursor: pointer;
 }
+
+.checkbox {
+    background: #EAEAEA;
+    border: 1px solid #CCCCCC;
+    cursor: pointer;
+}
