--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -2,7 +2,7 @@
 <% skin my_skin %>
 <% view thread uses Content::Thread extends base_board %>
 
-<% template post(Content::BaseBoard::Post post, bool op, bool fixed) %>
+<% template post(Content::BaseBoard::Post post, bool op) %>
 <% if ( op ) %>
     <div id="opPost<%= post.number %>" class="opPost">
 <% else %>
@@ -10,10 +10,10 @@
 <% end %>
     <div class="postHeader">
         <a id="<%= post.number %>"></a>
-        <% if ( op && fixed ) %>
+        <% if ( op && content.fixed ) %>
             <img src="/<%= sitePathPrefix %>img/pin.png" title="<%= fixedText %>">
         <% end %>
-        <% if ( op && !content.postingEnabled ) %>
+        <% if ( op && !content.closed ) %>
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
         <b><%= post.subject %></b>
@@ -119,10 +119,10 @@
         <% end %>
         <% include createAction("Top") %>
         <hr />
-        <% include post(opPost, 1, fixed) %>
+        <% include post(opPost, 1) %>
         <% foreach p in posts %>
             <% item %>
-                <% include post(p, 0, 0) %>
+                <% include post(p, 0) %>
             <% end %>
         <% empty %>
         <% end %>
